--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,8 +46,9 @@ dependencies:
   intl: ^0.17.0
 
   io: ^1.0.3
-
   flutter_svg: ^1.1.5
+
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
