HiveでGetできない

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   #store data to local
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  hive_generator: ^1.1.3
 
 dev_dependencies:
   flutter_test:
