[feat]import fl_chart

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
 
   #circular progress indicator
   percent_indicator: ^4.2.2
+  #two dimention charts
+  fl_chart: ^0.55.2
 
 dev_dependencies:
   flutter_test:
