--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,14 @@ dependencies:
   #two dimention charts
   fl_chart: ^0.55.2
 
+  #app icon
+  flutter_launcher_icons: ^0.10.0
+
+flutter_icons:
+  image_path: "assets/mathpire.png"
+  ios: true
+  android: true
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -70,6 +78,20 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+
+  flutter_native_splash: ^2.2.9
+
+flutter_native_splash:
+  color: "#ffffff"
+  image: "assets/mathpire_splash.png"
+  color_dark: "#ffffff"
+  image_dark: "assets/mathpire_splash.png"
+  fullscreen: true
+  android_12:
+    icon_background_color: "#ffffff"
+    image: "assets/mathpire_splash.png"
+    icon_background_color_dark: "#ffffff"
+    image_dark: "assets/mathpire_splash.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
