--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "flutter_pi_memorization" "\0"
+            VALUE "CompanyName", "com.spirallab" "\0"
+            VALUE "FileDescription", "mathpire" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "flutter_pi_memorization" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2022 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "flutter_pi_memorization.exe" "\0"
-            VALUE "ProductName", "flutter_pi_memorization" "\0"
+            VALUE "InternalName", "mathpire" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2022 com.spirallab. All rights reserved." "\0"
+            VALUE "OriginalFilename", "mathpire.exe" "\0"
+            VALUE "ProductName", "mathpire" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
