--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
 
   #Web View
   webview_flutter: ^4.0.1
+  package_info_plus: ^3.0.2
 
 flutter_icons:
   image_path: "assets/mathpire.png"
